feat : add title page

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ scripts/human_face.jpg
 .DS_Store
 scripts/__pycache__/face_detection.cpython-36.pyc
 scripts/__pycache__/interface.cpython-36.pyc
+scripts/__pycache__/face_detection.cpython-39.pyc
+.gitignore
+scripts/__pycache__/interface.cpython-39.pyc
+scripts/__pycache__/face_page1.cpython-39.pyc
