--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ scripts/__pycache__/face_detection.cpython-39.pyc
 .gitignore
 scripts/__pycache__/interface.cpython-39.pyc
 scripts/__pycache__/face_page1.cpython-39.pyc
+scripts/smile_emoji.png
+scripts/smile_emoji2.png
+scripts/smile_emoji3.png
