feat : report the angle as a widget

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@ scripts/smile_emoji3.png
 Pipfile
 .gitignore
 Pipfile.lock
+scripts/new.jpg
+scripts/app1.py
+scripts/human_face4.jpg
+scripts/human_face3.png
